--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <h1>Gombok</h1>
 
     <!-- Innen jössz te! -->
+        <!-- <ul id="ul">
+
+        </ul> -->
+   
     
     <!-- Ide szúrd be a JS-fájlt! -->
-
+    <script src="./js/first.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/second.js"></script>
 
     <!-- Ezt ne bántsd! -->
-    <script>
+    <!-- <script>
         if (handleClick) {
             handleClick();
         }
-    </script>
+    </script> -->
 </body>
 </html>
